<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Týndr</string>
    <string name="upplysingar">Týndr hjálpar þér að finna týnd gæludýr og gerir þér kleyft að láta aðra vita ef þú finnur dýr sem gæti verið týnt</string>
    <string name="action_settings">Settings</string>
    <string name="tynt">Týnt</string>
    <string name="fundid">Fundið</string>
    <string name="title_activity_form">Form</string>
    <string name="fundidTitle">Skrá Fundið Dýr</string>
    <string name="tyntTitle">Skrá Týnt Dýr</string>
    <string name="nafnLabel">Nafn Dýrs</string>
    <string name="tegundLabel">Tegund</string>
    <string name="kynLabel">Kyn</string>
    <string name="undirtegundLabel">Undirtegund</string>
    <string name="aldurLabel">Aldur</string>
    <string name="tyndistLabel">Týndist dags</string>
    <string name="fannstLabel">Fannst dags</string>
    <string name="skra">Skrá</string>
    <string name="title_activity_skoda_auglysingar">SkodaAuglysingar</string>
    <string name="hello_world">Hello world!</string>
    <string name="skodaAuglysingar">Skoða Auglýsingar</string>
    <string name="title_activity_adds">Adds</string>
    <string name="title_activity_log_in">Skráðu þig inn</string>
    <string name="title_activity_nysraning">Nýskráning</string>
    <string name="feldurLabel">Feldur</string>
    <string name="liturLabel">Litur á feld</string>
    <string name="lysingLabel">Lýsing</string>
    <string name="fannDyr">Ég fann þetta dýr!</string>
    <string name="fannEkkiDyr">Ég hef ekki séð þetta dýr.</string>
    <string name="lysingLabel">Lýsing</string>
    <string name="hafaSamband">Hafa samband við eiganda</string>
    <string name="lokaGlugga">Loka Glugga</string>

    <string-array name="Feldir">
        <item>Hárlaus</item>
        <item>Snöggklipptur</item>
        <item>Venjulegur</item>
        <item>Síður</item>
    </string-array>


    <string-array name="Litir">
        <item>Gulur</item>
        <item>Rauður</item>
        <item>Grænn</item>
        <item>Blár</item>
        <item>Svartur</item>
        <item>Hvítur</item>
        <item>Hrossaskítur</item>
    </string-array>
    
    <string-array name="Dyr">
        <item>Hundur</item>
        <item>Köttur</item>
        <item>Hestur</item>
        <item>Kýr</item>
        <item>Kind</item>
    </string-array>
	
    <string-array name="HundaKyn">
        <item>Hundur</item>
        <item>Tík</item>
    </string-array>
    
    <string-array name="KattarKyn">
        <item>Fress</item>
        <item>Læða</item>
    </string-array>
    
    <string-array name="HestaKyn">
        <item>Foli</item>
        <item>Hryssa</item>
    </string-array>
    
    <string-array name="KuaKyn">
        <item>Naut</item>
        <item>Kýr</item>
    </string-array>
    
    <string-array name="KindaKyn">
        <item>Hrútur</item>
        <item>Ær</item>
    </string-array>
    
    <string-array name="HundaUndirtegundir">
        <item>Border collie</item>
        <item>Bichon frise</item>
        <item>Labrador retriever</item>
        <item>Golden retriever</item>
        <item>Chihuahua</item>
        <item>Dalmatíuhundur</item>
        <item>Pekingeser</item>
        <item>Fox terrier</item>   
    </string-array>
    
    <string-array name="KattaUndirtegundir">
        <item>Sphynx</item>
        <item>Bengal</item>
        <item>Persian</item>
        <item>Siamese</item>
        <item>Somali</item>
    </string-array>
    
    <string-array name="AdrarUndirtegundir">
        <item>Íslenskt</item>
    </string-array>
    

    
</resources>
