<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >
    
    <TextView
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upplysingar"
        android:layout_weight="2"
        android:paddingTop="16dp"
        
        />
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="0dp"
   		android:orientation="vertical"
    	android:paddingLeft="16dp"
    	android:paddingRight="16dp"
    	android:layout_weight="2"
    	>
        
        
        <Button
            android:id="@+id/tynt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tynt"
            android:onClick="tynt"/>
        
        <Button
            android:id="@+id/fundid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fundid"
            android:onClick="fundid"/>
        <Button 
            android:id="@+id/skodaAuglysingar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skodaAuglysingar"
            android:onClick="auglysingar"/>

    </LinearLayout>

</LinearLayout>
