<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
        
        <ImageView
            android:id="@+id/mynd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.95" />

        <LinearLayout
        	android:layout_width="0dp"
        	android:layout_height="match_parent"
        	android:layout_weight="8"
        	android:orientation="vertical">
        	
            <TextView
                android:id="@+id/nafnLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nafnLabel" />
        	
        	<EditText
        	    android:id="@+id/nafn"
        	    android:layout_width="match_parent"
        	    android:layout_height="wrap_content"
        	    android:hint="Nafn Dýrs"
        	    android:inputType="text" >

            	<requestFocus />
        	</EditText>
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
        
        <LinearLayout
        	android:layout_width="0dp"
        	android:layout_height="match_parent"
        	android:layout_weight="1"
        	android:orientation="vertical">
        	
            <TextView 
                android:id="@+id/tegundLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tegundLabel"/>

	        <Spinner
	            android:id="@+id/tegund"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            />
	        
	   </LinearLayout>
	   
        <LinearLayout
        	android:layout_width="0dp"
        	android:layout_height="match_parent"
        	android:layout_weight="1"
        	android:orientation="vertical">
        	
            <TextView 
                android:id="@+id/tegundLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kynLabel"/>

	        <Spinner
	            android:id="@+id/kyn"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            />
		 </LinearLayout>
	        
	        
 	</LinearLayout>
    
    
    <LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="0dp"
        	android:layout_weight="2"
        	android:orientation="vertical">
        	
            <TextView 
                android:id="@+id/tegundLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undirtegundLabel"/>

	        <Spinner
	            android:id="@+id/undirtegund"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            />
		 </LinearLayout>

	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">
	    
       	<LinearLayout
        	android:layout_width="0dp"
        	android:layout_height="match_parent"
        	android:layout_weight="2"
        	android:orientation="vertical">
	        
       	    <TextView 
                android:id="@+id/aldurLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aldurLabel"/>
       
	        <EditText
	            android:id="@+id/aldur"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:inputType="number" />
	        
	   	</LinearLayout>
	    
       	<LinearLayout
        	android:layout_width="0dp"
        	android:layout_height="match_parent"
        	android:layout_weight="8"
        	android:orientation="vertical">
	        
       	    <TextView 
                android:id="@+id/dagsetningLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tyndistLabel"/>
       
	        <EditText
	            android:id="@+id/dagsetning"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="týnidist dags"/>
	        
	   	</LinearLayout>      
	</LinearLayout>
    
    <Button
        android:id="@+id/skra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skra"
        android:onClick="skra"/>
</LinearLayout>