<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/PopupScroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    android:background="@color/hvitur" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp" >

        <ImageView
            android:id="@+id/popup_lost_pet_pic"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginRight="@dimen/editText_margin"
            android:padding="@dimen/editText_margin"
            android:src="@drawable/ic_tyndr" />

        <TextView
            android:id="@+id/popup_nafn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/textview_pink"
            android:gravity="center"
            android:padding="@dimen/editText_margin"
            android:text="@string/nafnLabel"
            android:textColor="@color/svartur"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/popup_stadur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/textview_pink"
            android:gravity="center"
            android:padding="@dimen/editText_margin"
            android:text="@string/nafnLabel"
            android:textColor="@color/svartur"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/popup_lysing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/textview_pink"
            android:gravity="center"
            android:padding="@dimen/editText_margin"
            android:text="@string/nafnLabel"
            android:textColor="@color/svartur"
            android:textSize="18dp" />

        <Button
            android:id="@+id/popup_skra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif"
            android:text="@string/fannDyr"
            android:textColor="#FFFFFFFF"
            android:textSize="16dip"
            android:textStyle="bold" />

        <Button
            android:id="@+id/popup_loka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:background="@drawable/button"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="sans-serif"
            android:text="@string/fannEkkiDyr"
            android:textColor="#FFFFFFFF"
            android:textSize="16dip"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>